Contract Configurator 0.6.0
- Added SpawnVessel behaviour.
- Added ExperimentalPart behaviour.
- Added Docking parameter.
- Added TargetDestroyed parameter.
- Added VesselNotDestroyed parameter.
- Added VesselIsType parameter.
- Add situation filter to Orbit parameter.
- Support for VALIDATION node in PartValidation to allow more terse validation for specific part recipes on a ship.
- Added CONTRACT_GROUP and extra logic for limiting contracts based on group.
- SCANsat coverage parameter now displays the current scan percentage.
- Improvements to HasPassengers (loads real passengers!)
- Fix to how contract expiry is handled - setting to 0.0 will now give a contract that never expires, similar to the way the deadline works.
- New debugging window that shows the underlying configurator and allows selectively disabling parts of the contract for testing.
- Can now add REQUIREMENT nodes as children to PARAMETER nodes.
- Remove parameters that have been obsolete since Contract Configurator 0.5.0.

Contract Configurator 0.5.11
- Recompile for RemoteTech 1.6.2

Contract Configurator 0.5.10
- Fixed issue loading SCANsatCoverage parameter (thanks whiteout1911).

Contract Configurator 0.5.9
- Changes for SCANsat 9.0 (rc5)
- Fix for disableOnStateChange when there is no VesselGroupParameter (thanks voidheart).

Contract Configurator 0.5.8
- Recompile for RemoteTech 1.6.1
- Fix so that failing to load a contract is less destructive.

Contract Configurator 0.5.7
- Fix display of year/years and day/days in time based parameters (thanks DBT85).
- Fix obsolete error messages to display contract type.
- Fix for NullReference error when decoupling/undocking and the root part is a decoupler (thanks DaveTSG).

Contract Configurator 0.5.5
- Fixed issue in ReachState where empty situation caused issues (thanks tattagreis).
- Fixed problems with KerbalSpawner.
- Added new attribute to KerbalSpawner to have the Kerbal added to the roster (thanks scerion).

Contract Configurator 0.5.4